fix: enhance responsive design and layout adjustments in index page and CSS, improving text sizes, spacing, and visual consistency

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ html {
   width: 100%;
   margin: 0 auto;
   font-size: 0.69444vw;
-  font-size: clamp(10px, 0.69444vw, 16px);
+  font-size: clamp(6px, 0.69444vw, 10px);
 }
 @media (max-width: 1280px) {
   html {
@@ -326,7 +326,7 @@ fieldset {
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
-  min-height: 100vh;
+  min-height: calc(100vh - 10rem);
   border-radius: 50px 0 0 0;
 }
 @media (max-width: 768px) {
@@ -470,8 +470,8 @@ fieldset {
   gap: 1.5rem;
 }
 .feature-strip__item {
-  width: 390px;
-  height: 115px;
+  width: 400px;
+  height: 125px;
   border-radius: 50%;
   background: linear-gradient(to right, rgba(108, 206, 206, 0.08) 0%, rgba(0, 217, 245, 0.07) 100%);
   box-shadow: 0.1rem 0.3rem 0.78rem 0 rgba(0, 0, 0, 0.2);
